--- a/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
+++ b/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UvodnaAktivnost"
-    android:background="#315161">
+    android:background="@drawable/gradient_animacija"
+    android:id="@+id/animacijaLayout">
 
 
     <Button
