--- a/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
+++ b/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
@@ -7,15 +7,15 @@
     tools:context=".UvodnaAktivnost"
     android:background="@drawable/gradient_animacija"
     android:id="@+id/animacijaLayout">
-    
+
     <Button
         android:id="@+id/buZapocni"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="240dp"
+        android:layout_height="87dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="120dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="28dp"
         android:fontFamily="monospace"
         android:padding="20dp"
         android:text="ZAPOČNI IGRU"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="155dp"
         android:layout_marginEnd="155dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="44dp"
         android:fontFamily="monospace"
         android:padding="20sp"
         android:text="-IKS OKS-"
@@ -44,19 +44,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="250dp"
-        android:layout_height="275dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/iksoks" />
+        android:id="@+id/imageView7"
+        android:layout_width="404dp"
+        android:layout_height="335dp"
+        app:srcCompat="@drawable/iksoks"
+        tools:layout_editor_absoluteX="-5dp"
+        tools:layout_editor_absoluteY="-10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
