--- a/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
+++ b/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
@@ -49,6 +49,7 @@
         android:layout_height="335dp"
         app:srcCompat="@drawable/iksoks"
         tools:layout_editor_absoluteX="-5dp"
-        tools:layout_editor_absoluteY="-10dp" />
+        tools:layout_editor_absoluteY="-10dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
