--- a/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
+++ b/app/src/main/res/layout-land/activity_uvodna_aktivnost.xml
@@ -15,7 +15,7 @@
         android:layout_marginHorizontal="50dp"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="120dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="84dp"
         android:fontFamily="monospace"
         android:padding="20dp"
         android:text="ZAPOČNI IGRU"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="155dp"
         android:layout_marginEnd="155dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="64dp"
         android:fontFamily="monospace"
         android:padding="20sp"
         android:text="-IKS OKS-"
@@ -45,11 +45,11 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="404dp"
-        android:layout_height="335dp"
+        android:layout_width="302dp"
+        android:layout_height="254dp"
         app:srcCompat="@drawable/iksoks"
-        tools:layout_editor_absoluteX="-5dp"
-        tools:layout_editor_absoluteY="-10dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="37dp"
+        tools:layout_editor_absoluteY="61dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
